# fastapi-app

./: .env.template  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
fastapi_application/: create_fastapi_app.py  error_handlers.py  middleware.py
fastapi_application/api/: __init__.py
fastapi_application/api/api_v1/: __init__.py
fastapi_application/api/api_v1/views/: auth_views.py  category_views.py  main_dependencies_for_views.py  (+5 more)
fastapi_application/api/repositories/: category_repository.py  dependencies.py  order_repository.py  post_repository.py  product_repository.py  user_repository.py  utils.py
fastapi_application/api/services/: category_service.py  order_service.py  post_service.py  product_service.py  user_service.py  utils.py
fastapi_application/core/: config.py  db.py  logging_config.py
fastapi_application/core/authentication/: fa_users.py  transport.py  user_manager.py
fastapi_application/core/models/: __init__.py  access_token.py  base.py  category.py  mixin.py  order.py  order_product_association.py  post.py  product.py  user.py
fastapi_application/core/repositories/: base_repository.py  category_repository.py  dependencies.py  order_repository.py  post_repository.py  product_repository.py  user_repository.py  utils.py
fastapi_application/core/schemas/: auth_schema.py  category_schema.py  order_schema.py  post_schema.py  product_schema.py  user_schema.py
fastapi_application/core/services/: category_service.py  order_service.py  post_service.py  product_service.py  user_service.py  utils.py
redis_conf/: redis.py
(+4 files in other folders)
